Ya supuestamente abre con Linux y Mac